# stunning-waffle

./: .eslintrc.yml  .gitattributes  .gitignore  Makefile  index.html  package.json  platformio.ini  tsconfig.json  vite.config.ts
frontend/: main.ts
pico-firmware/: Cargo.toml
pico-firmware/.cargo/: config.toml
pico-firmware/src/: main.rs  max6675.rs  messaging.rs  utils.rs
src/: TimeChart.ts  main.cpp  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  messaging.rs  state_machine.rs
