[package]
name = "tauri-app"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[build_dependencies.tauri-build]
version = "1.4"
features = []

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }

serial = "0.4"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1

[features]
# DO NOT REMOVE | Tauri required feature
custom-protocol = ["tauri/custom-protocol"]
